--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^1.2.1
   google_sign_in: ^6.2.1
   flutter_local_notifications: ^17.2.2
+  sqflite: ^2.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
